# WotLK-Extensions-AzDelta

./: CMakeLists.txt  CMakeUserPresets.json.example
DevelopmentAddon/: DBCManager.lua
WotLKExtensions/: CustomLua.cpp  CustomLua.h  CustomPacket.cpp  CustomPacket.h  PatchConfig.h  Player.cpp  SharedDefines.h
WotLKExtensions/DBCReloader/: DBCReloader.cpp  DBCReloader.h
WotLKExtensions/GameData/: Addresses.h  UpdateFields.h
WotLKExtensions/Hotpatches/: HotpatchManager.cpp  HotpatchManager.h  ItemNameHotpatches.cpp  ItemNameHotpatches.h
